[gd_scene load_steps=5 format=3 uid="uid://bv71tejodpwtd"]

[ext_resource type="Script" uid="uid://bty1qlvuhh3eq" path="res://scenes/results_screen.gd" id="1_cij7f"]
[ext_resource type="Theme" uid="uid://q7gyfh33bbhn" path="res://themes/Default Button.tres" id="1_d57yd"]
[ext_resource type="FontFile" uid="uid://b6kh2h5es47us" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_fqf1x"]
[ext_resource type="Theme" uid="uid://bui63fvhgfk27" path="res://themes/Quit Button.tres" id="2_j5vbe"]

[node name="ResultsScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
script = ExtResource("1_cij7f")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -123.0
offset_right = 201.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Play Again" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
theme = ExtResource("1_d57yd")
theme_override_fonts/font = ExtResource("1_fqf1x")
text = "Play again"

[node name="Quit" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
theme = ExtResource("2_j5vbe")
text = "Quit"

[node name="WinLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -342.0
offset_top = 40.0
offset_right = 342.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_fqf1x")
theme_override_font_sizes/font_size = 96
text = "You win!"

[connection signal="pressed" from="PanelContainer/HBoxContainer/Play Again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
